--- a/css.css
+++ b/css.css
@@ -8,7 +8,7 @@
         color: #50C878;
         text-align: center;
         padding: 14px 16px;
-        text-decoration: none;
+        text-decoration: wavy;
         font-size: 17px;
     }
 
