--- a/css.css
+++ b/css.css
@@ -10,6 +10,7 @@
         padding: 14px 16px;
         text-decoration: wavy;
         font-size: 17px;
+        display: inline-block;
     }
 
     .topnav a:hover {
