--- a/css.css
+++ b/css.css
@@ -13,10 +13,10 @@
         display: inline-block;
     }
 
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
+        .topnav a:hover {
+            background-color: #131c14;
+            color: black;
+        }
 
     .topnav a.active {
         background-color: #212121;
