--- a/css.css
+++ b/css.css
@@ -26,5 +26,5 @@
 div {
     height: 100%;
     background-color: black;
-    background-image: linear-gradient( to right, red, #f06d06 );
+    background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(80,200,120,1) 50%, rgba(11,41,13,1) 100%);
 }
