--- a/css.css
+++ b/css.css
@@ -26,7 +26,7 @@
 .gradient {
     height: 100%;
     background-color: black;
-    background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(80,200,120,1) 50%, rgba(11,41,13,1) 100%);
-    background-attachment : fixed;
+    background: linear-gradient(90deg, rgba(80,200,120,1) 0%, rgba(70,161,100,1) 45%, rgba(6,0,0,1) 100%);
+    background-attachment: fixed;
     background-size: cover;
 }
