--- a/css.css
+++ b/css.css
@@ -23,6 +23,10 @@
     color: white;
 }
 
+html{
+    font-family: "Lato", Arial, sans-serif;
+}
+
 .gradient {
     height: 100%;
     background-color: black;
