--- a/css.css
+++ b/css.css
@@ -23,10 +23,10 @@
     color: white;
 }
 
-.html{
+html{
     font-family: "Lato", Arial, sans-serif;
 }
 
-.body {
+body {
     background-color: black;
 }
