--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to right, red, yellow);
+    background-image: linear-gradient(90deg, rgba(80,200,120,1) 0%, rgba(70,161,100,1) 45%, rgba(6,0,0,1) 100%);
 }
 
 .topnav {
