--- a/css.css
+++ b/css.css
@@ -43,11 +43,9 @@ body {
 }
 
 .box {
-    width: 300px;
-    height: 140px;
-    min-height: 60px;
-    margin: auto;
-    border: 5px solid lightgray;
-    padding: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: #1a1a1a;
     word-wrap: break-word;
 }
+
