--- a/css.css
+++ b/css.css
@@ -45,7 +45,7 @@ body {
 .box {
     width: 100%;
     height: 100%;
-    background-color: #1a1a1a;
+    background-color: #141414;
     word-wrap: break-word;
 }
 
