--- a/css.css
+++ b/css.css
@@ -10,6 +10,7 @@ body {
 .topnav {
     background-color: #141414;
     overflow: hidden;
+    border-bottom: 1px solid #ffffff;
 }
 
 .topnav a {
@@ -40,11 +41,5 @@ body {
     100% {
         content: "Thomas Bedwell, nobody's impressed";
     }
-}
-
-.box {
-    width: 100%;
-    background-color: #141414;
-    word-wrap: break-word;
 }
 
