--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(10,10,10,1) 50%, rgba(10,102,26,1) 100%);
+    background-image: linear-gradient(90deg, rgba(10,10,10,1) 50%, rgba(10,102,26,1) 100%);
     text-shadow: 2px 2px #141414;
 }
 
@@ -34,12 +34,6 @@ body {
     color: white;
 }
 
-@keyframes animate{
-    50% {
-        content: "Thomas Bedwell, I'm not impressed";
-    }
-    100% {
-        content: "Thomas Bedwell, nobody's impressed";
-    }
+.centered {
+    text-align: center;
 }
-
